Improve Larva TestTool: remove writers